# reglib

./: .gitignore  README.md  requirements.txt  setup.cfg
reglib/: dfa.py  language.py  nfa.py  regex.py
tests/: test_dfa.py  test_language.py  test_regex.py
